--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,8 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     transition: background-color 0.3s, color 0.3s;
+    overflow-x: hidden;
+    
 }
 
 /*END RESET Y ESTILOS GENERALES */
@@ -152,7 +154,7 @@ main #hero {
 
 main #hero #hero-img {
     position: absolute;
-    width: 98vw;
+    width: 100vw;
     height: 100vh;
     object-fit: cover;
     opacity: 0.5;
@@ -325,7 +327,6 @@ main #features article p {
 
 /* FOOTER */
 footer {
-    
     padding: 3vh 2vw;
     text-align: center;
     background: var(--bg-color);
