--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,42 @@ main #features article p {
 }
 /* END MAIN #FEATURES */
 
+
+/* Estilo de la galería */
+#gallery {
+    padding: 2vh;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
+
+#gallery h2 {
+    font-size: 4vh;
+    margin-top: 10vh;
+    display: flex;
+    justify-content: center;
+}
+
+
+#gallery-images {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    height: 80vh;
+    width: 100vw;
+    flex-wrap: wrap;
+}
+
+#gallery-images img {
+    width: 40vw;
+    height: 35vh;
+    object-fit:cover;
+    border-radius: 10px;
+    transition: all 0.3s ease-in-out;
+}
+
 /* SECCIONES PANTALLA COMPLETA */
 #delivery,
 #payment-methods,
