Actualizando index.html y styles.css

--- a/css/styles-compra.css
+++ b/css/styles-compra.css
@@ -196,14 +196,19 @@ aside {
 
 /* FOOTER */
 footer {
+    margin-top: 2vh;
     grid-area: footer;
     padding: 2rem;
     text-align: center;
     background: var(--bg-color);
     color: var(--text-color);
     font-size: clamp(1rem, 2.5vw, 1.2rem);
-    border-top: 2px solid var(--highlight-color);
+    border-radius: 12px;
+    border-left: solid var(--highlight-color) ;
+    border-right: solid var(--highlight-color) ;
+
 }
+/* END FOOTER */
 
 /* RESPONSIVE */
 @media (max-width: 1024px) {
